<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="105dp"
        android:contentDescription="@string/logoImageView_description"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appNameTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/logo_orange"
        android:drawableStart="@drawable/ic_action_username"
        android:ems="10"
        android:hint="@string/usernameEditText_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/passwordEditText_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:backgroundTint="@color/logo_orange"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/logo_orange"
        android:text="@string/loginButton_text" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_imageView"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/registerTextView_text" />

</RelativeLayout>